# Deck

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  models.rs
backend/src/analytics/: stats.rs
backend/src/contest/: mod.rs
backend/src/db/: mod.rs
backend/src/fetcher/: codeforces.rs
backend/src/git/: mod.rs
backend/src/rpc/: client.rs  protocol.rs  server.rs
backend/src/team/: mod.rs
browser/: background.js  content.js  manifest.json
browser/popup/: popup.html  popup.js
docs/: configuration.md  contest-mode.md  getting-started.md  git-sync.md  installation.md  keyboard-shortcuts.md  neovim-guide.md  quickstart.md  team-guide.md  troubleshooting.md  tui-guide.md
plugins/neovim/lua/deck/: analytics.lua  buffers.lua  config.lua  init.lua  layout.lua  rpc.lua  submit.lua  tests.lua
plugins/neovim/plugin/: deck.vim
scripts/: build-release.sh  demo.sh
tui/: Cargo.toml
tui/src/: app.rs  main.rs  ui.rs
tui/src/tabs/: analytics.rs  config.rs  contest.rs  dashboard.rs  mod.rs  problems.rs  target.rs  team.rs
