[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
git2 = "0.19"
walkdir = "2"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "deck"
path = "src/main.rs"
